# redcli

./: Dockerfile  Makefile  README.md  awspen.py  awsredcli.py  index.md  pyproject.toml  redcli.py  requirements.txt
keys/: awsred-ssh.pem
providers/aws/: ec2.py  iam.py  imds.py  s3.py  sts.py
providers/azure/: imds.py
providers/gcp/: imds.py  md.py  metadata.py
services/: ebs.py  ec2.py  eks.py  iam.py  imds.py  s3.py  sts.py
