[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "awspen"
author = "Alexis Rodriguez"
author-email = "rodriguez10011999@gmail.com"
home-page = "https://github.com/binexisHATT/awspen"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

requires = [
"rich",
"typer",
]

[tool.flit.scripts]
awspen = "awspen.__main__:main"
